--- a/app/assets/stylesheets/pages/_user_index.scss
+++ b/app/assets/stylesheets/pages/_user_index.scss
@@ -23,7 +23,7 @@
       border: 1px solid #6ECAD6;
       box-shadow: none;
     }
-    }
+  }
 
   }
 
@@ -67,6 +67,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 16px 0;
+    margin-bottom: 16px;
   }
 
   .snip1336 {
@@ -113,24 +114,8 @@
     border-color: transparent transparent transparent white;
     border: 0px 1px solid #6ECAD6;
   }
-  .snip1336 figcaption a {
-    padding: 5px;
-    border: 1px solid #ffffff;
-    color: #ffffff;
-    font-size: 0.7em;
-    text-transform: uppercase;
-    margin: 10px 0;
-    display: inline-block;
-    opacity: 0.65;
-    width: 47%;
-    text-align: center;
-    text-decoration: none;
-    font-weight: 600;
-    letter-spacing: 1px;
-  }
-  .snip1336 figcaption a:hover {
-    opacity: 1;
-  }
+
+
   .snip1336 .profile {
     border-radius: 50%;
     position: absolute;
@@ -179,8 +164,11 @@
   .card-details {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     .review-stars{
       display: flex;
+      justify-content: space-between;
+      padding-top: 16px;
        i {
       padding: 0px 5px;
         }
